--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,20 @@
       routerLink="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H2Y2FVY950"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H2Y2FVY950");
+    </script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
