deploy: e9c86f1cdd6f650d6c69794a7fe0bbba1664f454

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
   <head>
     <meta charset="utf-8">
-    <title>NLLFrontend</title>
+    <title>Nuevo Los Lagos</title>
     <base routerlink="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" routerlink="favicon.ico">
