--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <title>Nuevo Los Lagos</title>
-    <base routerLink="/" />
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" routerLink="favicon.ico" />
+    <meta name="description" content="Descripción de mi aplicación Angular." />
+    <meta name="keywords" content="angular, aplicación, ejemplo" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
-      routerLink="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      routerLink="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    href=="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+    rel="stylesheet" /> <link
+    href=="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet" />
     <!-- Google tag (gtag.js) -->
     <script
       async
