deploy: 590df57a09450c804aaa9a5f72b2cf676b2ed22a

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Descripción de mi aplicación Angular.">
     <meta name="keywords" content="angular, aplicación, ejemplo">
+    <meta name="google-site-verification" content="1tRvFMTO1sL8PrB_K9xjLsCAwoJ3JRgB8cTRVQotCoE">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-H2Y2FVY950"></script>
